feat(TPSVC-20228): migrate to SB3 (#23)